--- a/Typing/Typing-style.css
+++ b/Typing/Typing-style.css
@@ -4,11 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-/* Main Container */
-.mainDiv {
+body{
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   position: relative;
   background: linear-gradient(to bottom, #000000, #1e0101);
 }
